--- a/rules
+++ b/rules
@@ -59,4 +59,8 @@ Bounties
 17. Get a 2 - You get 20000 Disc Tokens
 18. Get a 3 - You get 50000 Disc Tokens
 
+Tokens will be minted on the Kusama Statemine Parachain. 
+
+233000 Tokens Available. These will be the first released tokens. Max Supply of 5 million. 
+
 
